// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonList component renders correctly 1`] = `
<div
  className=" link-comp-wrapper"
>
  <Styled(Anchor)
    className="link-button"
    href="/girl"
    key="Girl"
    target=""
    title="Girl"
  >
    <Styled(Button)
      buttonVariation="category-links-dark"
      className="link-button-wrapper-class"
      data-locator="1"
    >
      Girl
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="link-button"
    href="/toddler-girl"
    key="Toddler_Girl"
    target=""
    title="Toddler Girl"
  >
    <Styled(Button)
      buttonVariation="category-links-dark"
      className="link-button-wrapper-class"
      data-locator="2"
    >
      Toddler Girl
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="link-button"
    href="/c/boy"
    key="Boy"
    target=""
    title="Boy"
  >
    <Styled(Button)
      buttonVariation="category-links-dark"
      className="link-button-wrapper-class"
      data-locator="3"
    >
      Boy
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="link-button"
    href="/c/"
    key="Tod_Boy"
    target=""
    title="Tod Boy"
  >
    <Styled(Button)
      buttonVariation="category-links-dark"
      className="link-button-wrapper-class"
      data-locator="4"
    >
      Toddler Boy
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="link-button"
    href="/c/"
    key="Baby"
    target=""
    title="Baby"
  >
    <Styled(Button)
      buttonVariation="category-links-dark"
      className="link-button-wrapper-class"
      data-locator="5"
    >
      Baby
    </Styled(Button)>
  </Styled(Anchor)>
</div>
`;

exports[`ButtonList component renders correctly for image cta List 1`] = `
<div
  className=" scroll-comp-wrapper"
>
  <div
    className="scroll-cta-wrapper div-image-wrapper"
  >
    <div
      className="img-wrapper"
    >
      <div>
        <Styled(Anchor)
          data-locator="1"
          fontSizeVariation="large"
          fontWeightVariation="active"
          href="/girl"
          key="0"
          target=""
          title="Girl"
        >
          <WithTheme(DamImage)
            className="image-cta"
            data-locator="1"
            imgData={
              Object {
                "alt": "Girl",
                "crop_d": "",
                "crop_m": "",
                "crop_t": "",
                "title": "Girl",
                "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/q_auto:best/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
              }
            }
          />
          <div
            className="image-comp"
          >
            Girl
          </div>
        </Styled(Anchor)>
      </div>
    </div>
    <div
      className="img-wrapper"
    >
      <div>
        <Styled(Anchor)
          data-locator="2"
          fontSizeVariation="large"
          fontWeightVariation="active"
          href="/toddler-girl"
          key="1"
          target=""
          title="Toddler Girl"
        >
          <WithTheme(DamImage)
            className="image-cta"
            data-locator="2"
            imgData={
              Object {
                "alt": "Toddler Girl alt",
                "crop_d": "",
                "crop_m": "",
                "crop_t": "",
                "title": "Toddler Girl title",
                "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
              }
            }
          />
          <div
            className="image-comp"
          >
            Toddler Girl
          </div>
        </Styled(Anchor)>
      </div>
    </div>
    <div
      className="img-wrapper"
    >
      <div>
        <Styled(Anchor)
          data-locator="3"
          fontSizeVariation="large"
          fontWeightVariation="active"
          href="/c/boy"
          key="2"
          target=""
          title="Boy"
        >
          <WithTheme(DamImage)
            className="image-cta"
            data-locator="3"
            imgData={
              Object {
                "alt": "Boy",
                "crop_d": "",
                "crop_m": "",
                "crop_t": "",
                "title": "Boy",
                "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
              }
            }
          />
          <div
            className="image-comp"
          >
            Boy
          </div>
        </Styled(Anchor)>
      </div>
    </div>
    <div
      className="img-wrapper"
    >
      <div>
        <Styled(Anchor)
          data-locator="4"
          fontSizeVariation="large"
          fontWeightVariation="active"
          href="/c/"
          key="3"
          target=""
          title="Tod Boy"
        >
          <WithTheme(DamImage)
            className="image-cta"
            data-locator="4"
            imgData={
              Object {
                "alt": "Toddler Boy alt",
                "crop_d": "",
                "crop_m": "",
                "crop_t": "",
                "title": "Tod Boy title",
                "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME3_vmfhnu.jpg",
              }
            }
          />
          <div
            className="image-comp"
          >
            Toddler Boy
          </div>
        </Styled(Anchor)>
      </div>
    </div>
    <div
      className="img-wrapper"
    >
      <div>
        <Styled(Anchor)
          data-locator="5"
          fontSizeVariation="large"
          fontWeightVariation="active"
          href="/c/"
          key="4"
          target=""
          title="Baby"
        >
          <WithTheme(DamImage)
            className="image-cta"
            data-locator="5"
            imgData={
              Object {
                "alt": "Baby Alt",
                "crop_d": "",
                "crop_m": "",
                "crop_t": "",
                "title": "Baby title",
                "url": "https://res.cloudinary.com/tcp-dam-test/image/upload/v1558543115/ecom/assets/content/tcp/us/home/moduled/US-HP-050519-MINIME1_h9cwcd.jpg",
              }
            }
          />
          <div
            className="image-comp"
          >
            Baby
          </div>
        </Styled(Anchor)>
      </div>
    </div>
  </div>
</div>
`;

exports[`ButtonList component renders correctly for scroll cta buttons 1`] = `
<div
  className=" scroll-comp-wrapper"
>
  <Styled(Anchor)
    className="scroll-button"
    href="/girl"
    key="Girl"
    target=""
    title="Girl"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="scroll-cta-wrapper-class"
      data-locator="1"
      fill=""
    >
      Girl
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="scroll-button"
    href="/toddler-girl"
    key="Toddler_Girl"
    target=""
    title="Toddler Girl"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="scroll-cta-wrapper-class"
      data-locator="2"
      fill=""
    >
      Toddler Girl
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="scroll-button"
    href="/c/boy"
    key="Boy"
    target=""
    title="Boy"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="scroll-cta-wrapper-class"
      data-locator="3"
      fill=""
    >
      Boy
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="scroll-button"
    href="/c/"
    key="Tod_Boy"
    target=""
    title="Tod Boy"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="scroll-cta-wrapper-class"
      data-locator="4"
      fill=""
    >
      Toddler Boy
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="scroll-button"
    href="/c/"
    key="Baby"
    target=""
    title="Baby"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="scroll-cta-wrapper-class"
      data-locator="5"
      fill=""
    >
      Baby
    </Styled(Button)>
  </Styled(Anchor)>
</div>
`;

exports[`ButtonList component renders correctly with props for stacked CTA buttons 1`] = `
<div
  className=" stack-comp-wrapper"
>
  <Styled(Anchor)
    className="stacked-button"
    href="/girl"
    key="Girl"
    target=""
    title="Girl"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="stacked-cta-wrapper-class"
      data-locator="1"
      fill=""
    >
      Girl
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="stacked-button"
    href="/toddler-girl"
    key="Toddler_Girl"
    target=""
    title="Toddler Girl"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="stacked-cta-wrapper-class"
      data-locator="2"
      fill=""
    >
      Toddler Girl
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="stacked-button"
    href="/c/boy"
    key="Boy"
    target=""
    title="Boy"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="stacked-cta-wrapper-class"
      data-locator="3"
      fill=""
    >
      Boy
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="stacked-button"
    href="/c/"
    key="Tod_Boy"
    target=""
    title="Tod Boy"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="stacked-cta-wrapper-class"
      data-locator="4"
      fill=""
    >
      Toddler Boy
    </Styled(Button)>
  </Styled(Anchor)>
  <Styled(Anchor)
    className="stacked-button"
    href="/c/"
    key="Baby"
    target=""
    title="Baby"
  >
    <Styled(Button)
      buttonVariation="fixed-width"
      className="stacked-cta-wrapper-class"
      data-locator="5"
      fill=""
    >
      Baby
    </Styled(Button)>
  </Styled(Anchor)>
</div>
`;

exports[`ButtonList component renders correctly without props 1`] = `
<div
  className=" "
>
  <Component />
</div>
`;
